// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable no options 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable selectable 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-data-table--selectable is-upgraded\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th>
        <label class=\\"mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect mdl-data-table__select mdl-js-ripple-effect--ignore-events is-upgraded\\" data-upgraded=\\",MaterialCheckbox\\"><input type=\\"checkbox\\" class=\\"mdl-checkbox__input\\"><span class=\\"mdl-checkbox__focus-helper\\"></span><span class=\\"mdl-checkbox__box-outline\\"><span class=\\"mdl-checkbox__tick-outline\\"></span></span><span class=\\"mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center\\"><span class=\\"mdl-ripple\\"></span></span></label>
      </th>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <label class=\\"mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect mdl-data-table__select mdl-js-ripple-effect--ignore-events is-upgraded\\" data-upgraded=\\",MaterialCheckbox\\"><input type=\\"checkbox\\" class=\\"mdl-checkbox__input\\"><span class=\\"mdl-checkbox__focus-helper\\"></span><span class=\\"mdl-checkbox__box-outline\\"><span class=\\"mdl-checkbox__tick-outline\\"></span></span><span class=\\"mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center\\"><span class=\\"mdl-ripple\\"></span></span></label>
      </td>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td>
        <label class=\\"mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect mdl-data-table__select mdl-js-ripple-effect--ignore-events is-upgraded\\" data-upgraded=\\",MaterialCheckbox\\"><input type=\\"checkbox\\" class=\\"mdl-checkbox__input\\"><span class=\\"mdl-checkbox__focus-helper\\"></span><span class=\\"mdl-checkbox__box-outline\\"><span class=\\"mdl-checkbox__tick-outline\\"></span></span><span class=\\"mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center\\"><span class=\\"mdl-ripple\\"></span></span></label>
      </td>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td>
        <label class=\\"mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect mdl-data-table__select mdl-js-ripple-effect--ignore-events is-upgraded\\" data-upgraded=\\",MaterialCheckbox\\"><input type=\\"checkbox\\" class=\\"mdl-checkbox__input\\"><span class=\\"mdl-checkbox__focus-helper\\"></span><span class=\\"mdl-checkbox__box-outline\\"><span class=\\"mdl-checkbox__tick-outline\\"></span></span><span class=\\"mdl-checkbox__ripple-container mdl-js-ripple-effect mdl-ripple--center\\"><span class=\\"mdl-ripple\\"></span></span></label>
      </td>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable shadows shadow 2dp 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-shadow--2dp\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable shadows shadow 3dp 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-shadow--3dp\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable shadows shadow 4dp 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-shadow--4dp\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable shadows shadow 6dp 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-shadow--6dp\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable shadows shadow 8dp 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-shadow--8dp\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable shadows shadow 16dp 1`] = `
"<table class=\\"mdl-data-table mdl-js-data-table mdl-shadow--16dp\\" data-upgraded=\\",MaterialDataTable\\">
  <thead>
    <tr>
      <th class=\\"mdl-data-table__cell--non-numeric\\">
        Material
      </th>
      <th>
        Quantity
      </th>
      <th>
        Unit Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Acrylic (Transparent)
      </td>
      <td>
        25
      </td>
      <td>
        $2.90
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Plywood (Birch)
      </td>
      <td>
        50
      </td>
      <td>
        $1.25
      </td>
    </tr>
    <tr>
      <td class=\\"mdl-data-table__cell--non-numeric\\">
        Laminate (Gold on Blue)
      </td>
      <td>
        10
      </td>
      <td>
        $2.35
      </td>
    </tr>
  </tbody>
</table>"
`;
